# orcha

./: .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXTENSIBILITY_ROADMAP.md  MERGE_RELIABILITY_PLAN.md  ORCHESTRATOR_AGENT_PLAN.md  PLAN.md  README.md  SECURITY.md  TODO.md  cog.toml  hk.pkl  mise.toml  pyproject.toml  wt.fish
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: check.yml  release.yml
docs/: AGENT_ORCHESTRATOR_PLAN.md  EXTENSIBILITY_ROADMAP.md  EXTENSIONS.md  ORCHESTRATOR_AGENT_PLAN.md
src/orcha/: __init__.py  __main__.py  cli.py  commands.py  config.py  errors.py  github.py  messages.py  models.py  output.py  parsing.py  prompts.py  repository.py  session_logging.py  utils.py  workflow.py
src/pid/: __init__.py  __main__.py  cli.py  commands.py  config.py  context.py  diagnostics.py  engine.py  errors.py  events.py  extensions.py  failures.py  forge.py  github.py  interactive.py  keepawake.py  messages.py  models.py  orchestrator.py  output.py  parsing.py  policy.py  prompts.py  repository.py  run_state.py  session_logging.py  typer_parsing.py  utils.py  workflow.py  workflow_steps.py
tests/: __init__.py  fakes.py  test_config.py  test_engine.py  test_extensions.py  test_messages.py  test_orcha.py  test_orcha_flow.py  test_orchestrator_agent.py  test_pid.py  test_pid_flow.py  test_session_logging.py  test_units.py  test_wt_fish.py
