[project]
name = "pid"
version = "0.3.0"
description = "agent orchestration tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "plumbum>=1.9.0",
  "rich>=15.0.0",
  "typer>=0.25.0",
]

[project.scripts]
pid = "pid.cli:app"

[dependency-groups]
dev = [
  "hypothesis>=6.152.3",
  "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
