[project]
name = "pid"
version = "0.12.0"
description = "agent orchestration tool"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Karl Hans Laurits", email = "karl@laurits.dev" }]
dependencies = [
  "plumbum==1.10.0",
  "rich==15.0.0",
  "typer==0.25.1",
]

[project.scripts]
pid = "pid.cli:app"

[dependency-groups]
dev = [
  "hypothesis==6.152.4",
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "pytest-xdist==3.8.0",
]

[build-system]
requires = ["uv_build==0.11.12"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "1 week"
